Added some minor changes

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </header>
 
   <form id="my-form" class="text-center">
-    <input type="text" id="movie-name" placeholder="Search...">
+    <input type="search" id="movie-name" placeholder="Search...">
   </form>
 
   <div class="container">
