--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="specific.css">
+
 </head>
 
 <body>
@@ -24,10 +24,10 @@
   </form>
 
   <div class="container">
-    <div id="movies" class="row"></div>
-  </div>
+    <div id="movies" class="row">
 
-  <div class="space"></div>
+    </div>
+  </div>
 
   <footer class=" text-center">
     <h3 id="footer-title">
